# climate_resilience

./: .gitignore  =  CLAUDE.md  Makefile  README.md  dagster.yaml  dagster_cloud copy.yaml  dagster_cloud.yaml  dagster_cloud_post_install.sh  dagster_cloud_pre_install.sh  pyproject.toml  repomix-output.txt  setup.py
.github/workflows/: branch_deployments.yml  deploy.yml
climate_resilience/: __init__.py
climate_resilience/agents/: __init__.py  conversation_classification_agent.py  conversation_event_summary_agent.py  post_association_agent.py
climate_resilience/assets/analytics/: __init__.py  dbt_project.yml  profiles.yml
climate_resilience/assets/bronze/: __init__.py  medias.py  x.py
climate_resilience/assets/gold/: __init__.py  dbt_project.yml  profiles.yml
climate_resilience/assets/media/: __init__.py  media.py
climate_resilience/assets/narratives/: __init__.py  event_summary.py  narratives.py
climate_resilience/assets/prototypes/: __init__.py  conversation_brief.py  conversation_enhancements.py  conversation_event_summary_agent.py
climate_resilience/assets/silver/: __init__.py  event_summary.py  geolocation.py  narratives.py
climate_resilience/assets/social_networks/: __init__.py  geolocation.py  x.py
climate_resilience/io_managers/: __init__.py
climate_resilience/jobs/: __init__.py
climate_resilience/partitions/: __init__.py
climate_resilience/resources/: __init__.py  gcp_resource.py  hex_resource.py  proxycurl_resource.py  x_resource.py
climate_resilience/schedules/: __init__.py
climate_resilience/utils/: conversations.py
climate_resilience_platform/: __init__.py
climate_resilience_platform/agents/: __init__.py  conversation_classification_agent.py
climate_resilience_platform/assets/: enrichments.py  geolocation.py  medias.py  narratives.py  prototypes.py  social_networks.py  x.py
climate_resilience_platform/assets/analytics/: __init__.py  (+2 more)
climate_resilience_platform/jobs/: __init__.py
climate_resilience_platform/partitions/: __init__.py
climate_resilience_platform/resources/: __init__.py
climate_resilience_platform/schedules/: __init__.py
design/: semantic_layer.dbml
documentation/: climate_discourse_framework.md  semantic_layer.dbml
platform/: .gitignore  Makefile  pyproject.toml  setup.py
platform/climate_resilience_platform/: __init__.py
platform/climate_resilience_platform/assets/: medias.py  social_networks.py
platform/climate_resilience_platform/io_managers/: __init__.py
platform/climate_resilience_platform/jobs/: __init__.py
platform/climate_resilience_platform/partitions/: __init__.py
platform/climate_resilience_platform/resources/: __init__.py  supabase_resource.py  x_resource.py
platform/climate_resilience_platform/schedules/: __init__.py
prototype/: associate_discourses.py  prototype.qmd  pyproject.toml
prototype/prototype/: agents.py  associate_discourses.py  associate_posts.py  classify_conversations.py  post_association_agent.py  utils.py
prototype/prototype/data/: climate_conversations.csv  climate_conversations.sql  conversation_classifications.csv  post_associations_df.csv
prototype/prototype/notebook/: prototype.qmd
(+42 files in other folders)
