[tool.poetry]
name = "climate-resilience"
version = "0.1.0"
description = ""
authors = ["Olivier Dupuis <olivier@republicofdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dagster = "^1.9.0"
dagster-dbt = "^0.25.0"
dagster-gcp = "^0.25.0"
dagster-gcp-pandas = "^0.25.0"
dagster-webserver = "^1.9.0"
dbt-core = "1.8.8"
dbt-bigquery = "^1.8.3"
feedparser = "^6.0.11"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
pandas = "^2.2.3"
pydantic = "2.9.2"
spacy = "3.8.2"
supabase = "^2.10.0"
dagster-hex = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
