[tool.poetry]
name = "climate-resilience"
version = "0.1.0"
description = ""
authors = ["Olivier Dupuis <olivier@republicofdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dagster = "1.9.3"
dagster-dbt = "0.25.3"
dagster-gcp = "0.25.3"
dagster-gcp-pandas = "0.25.3"
dagster-webserver = "1.9.3"
dbt-bigquery = "1.8.3"
dbt-core = "1.8.8"
duckduckgo-search = "6.3.7"
feedparser = "6.0.11"
langchain-community = "0.3.9"
langchain-core = "0.3.21"
langchain-openai = "0.2.11"
langgraph = "0.2.56"
pandas = "2.2.3"
pydantic = "2.9.2"
spacy = "3.7.5"
supabase = "2.10.0"
thinc = "8.2.5"
wikipedia = "1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
