[tool.poetry]
name = "prototype"
version = "0.1.0"
description = ""
authors = ["Olivier Dupuis <olivier@republicofdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = "^3.9.1"
jupyter = "^1.0.0"
ipython = "^8.26.0"
pandas = "^2.2.2"
feedparser = "^6.0.11"
numpy = "1.26.4"
langchain = "^0.2.11"
langchain-core = "^0.2.24"
langsmith = "^0.1.93"
langchain-ollama = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
